fix horizontal scroll on small screens due to header image

--- a/src/protected/application/themes/BaseV1/assets/css/sass/application/_entity-header.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/application/_entity-header.scss
@@ -20,11 +20,14 @@
 .imagem-do-header {
     position: relative;
     height: 12rem;
-    margin: -2rem -2rem 2rem;
+    margin: -$padding-base;
     background-color: $gray;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    @media screen and (min-width: $screen-tablet) {
+        margin: -2rem -2rem 2rem;
+    }
     @media screen and (min-width: $screen-lg-desktop) {
         margin: -4rem -4rem 4rem;
     }
